# Fotokite_arm

./: README.md
arm_control/config/: controlRRP.yaml
arm_description/launch/: description.launch  fotokite_robot.launch  rviz.launch  rviz_one_module.launch  rviz_two_modules.launch
arm_description/rviz/: rrp_uav.rviz
arm_description/urdf/: RR.xacro  RRP.xacro  RRP_UAV.xacro  RRR.xacro  arm_generated.urdf  fotokite.gazebo  fotokite.urdf.xacro  fotokite_3_modules.urdf.xacro  fotokite_3_modules_macro.xacro  fotokite_3_modules_transmission.urdf.xacro  fotokite_7dof.gazebo.xacro  fotokite_7dof.xacro  fotokite_7dof_macro.xacro  fotokite_7dof_macro_original.xacro  fotokite_7dof_two_modules.xacro  robot.xacro
arm_gazebo/config/: fotokite_7dof.yaml  fotokite_control.yaml
arm_gazebo/launch/: empty_world.launch  fotokite_control.launch
arm_moveit/: .setup_assistant  package.xml
arm_moveit/config/: arm.srdf  ompl_planning.yaml
arm_moveit/launch/: demo.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fotokite_control/: CMakeLists.txt  package.xml
fotokite_control/config/: controller_params.yaml  fotokite_control.yaml  fotokite_control_original.yaml
fotokite_control/launch/: fotokite_control.launch
fotokite_description/: CMakeLists.txt  package.xml
fotokite_description/config/: fotokite.rviz
fotokite_description/launch/: fotokite_robot.launch  rviz.launch  start_simulation_control.launch
fotokite_description/robots/: robot.xacro
fotokite_description/urdf/: fotokite.gazebo  fotokite.urdf.xacro  fotokite_3_modules.gazebo  fotokite_3_modules.urdf.xacro  fotokite_3_modules_macro.xacro  fotokite_3_modules_transmission.urdf.xacro
fotokite_gazebo/: CMakeLists.txt  package.xml
fotokite_gazebo/launch/: crasar_world.launch
fotokite_gazebo/worlds/: crasar_complete.world
fotokite_moveit/: .setup_assistant  demo_waypoints.launch  package.xml
fotokite_moveit/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  moveit_rviz_waypoint.launch  moveit_rviz_waypoint.rviz  ompl_planning.yaml
fotokite_moveit/launch/: demo_waypoint.launch  move_group.launch  moveit_rviz.launch  moveit_waypoint.rviz  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fotokite_simulation/: CMakeLists.txt  package.xml
fotokite_simulation/launch/: gazebo_ros_control.launch  moveit_demo.launch
fotokite_two_modules_moveit/: .setup_assistant  CMakeLists.txt  package.xml
fotokite_two_modules_moveit/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
fotokite_two_modules_moveit/launch/: default_warehouse_db.launch  demo.launch  demo_planner.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planner.rviz  moveit_rviz.launch  moveit_rviz_planner.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
move_group_subscriber_pkg/: CMakeLists.txt  package.xml
move_group_subscriber_pkg/src/: move_group_subscriber.cpp
moveit_configs/fotokite_moveit/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/fotokite_passive/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/fotokite_passive/config/: controllers.yaml  fake_controllers.yaml  fotokite.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit_configs/fotokite_passive/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  fotokite_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_configs/fotokite_passive/src/: full_action_server.cpp
moveit_configs/fotokite_subgroups/: .setup_assistant  CMakeLists.txt  package.xml
moveit_tutorials/doc/move_group_interface/: CMakeLists.txt
moveit_tutorials/doc/move_group_interface/launch/: fotokite_move_path.launch  fotokite_move_path_obstacle.launch  fotokite_move_path_obstacle_cartesian.launch  fotokite_waypoint.launch  move_fotokite.launch
moveit_tutorials/doc/move_group_interface/src/: fotokite_move_joint.cpp  fotokite_move_path.cpp  fotokite_move_path.cpp.autosave  fotokite_move_path_obstacle.cpp  fotokite_move_path_obstacle_cartesian.cpp  fotokite_waypoint.cpp  move_fotokite.cpp  move_group_interface_tutorial.cpp  panda_move_path_obstacle.cpp
panda_moveit/: .setup_assistant  package.xml
panda_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  (+1 more)
rr_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rrp_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rrp_uav_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rrr_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+109 files in other folders)
