<?xml version="1.0"?>
<package format="2">
    <name>fotokite_control</name>
    <version>0.0.0</version>
    <description>
        The fotokite_control package for the transmission
    </description>

    <author email="jorge.deleon@upm.es">Jorge De Leon</author>
    <maintainer email="jorge.deleon@upm.es">Jorge De Leon</maintainer>

    <license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>ros_control</build_depend>
    <build_depend>ros_controllers</build_depend>

    <exec_depend>ros_control</exec_depend>
    <exec_depend>ros_controllers</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_controller</exec_depend>
    <exec_depend>effort_controllers</exec_depend>

</package>
