<?xml version="1.0"?>
<package>
  <name>fotokite_simulation</name>
  <version>0.1.0</version>
  <description>The fotokite_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="crasar@todo.todo">crasar</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend> 
  <build_depend>gazebo</build_depend> 
  <run_depend>rospy</run_depend> 
  <run_depend>gazebo</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>  </export>
</package>
